Añadido el trabajo de lupita Estrella_NYC

--- a/Practica 1 ventas en Nueva York.ipynb
+++ b/Practica 1 ventas en Nueva York.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0x7fa69c18ddd8>"
+       "<sqlalchemy.engine.base.Connection at 0x7f931ee44cf8>"
       ]
      },
      "execution_count": 2,
@@ -38,428 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdd = pd.read_csv('/home/spqr14/Documentos/Minería/mineria/Práctica 1/datos/nyc-rolling-sales.csv', encoding='utf8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>BOROUGH</th>\n",
-       "      <th>NEIGHBORHOOD</th>\n",
-       "      <th>BUILDING CLASS CATEGORY</th>\n",
-       "      <th>TAX CLASS AT PRESENT</th>\n",
-       "      <th>BLOCK</th>\n",
-       "      <th>LOT</th>\n",
-       "      <th>EASE-MENT</th>\n",
-       "      <th>BUILDING CLASS AT PRESENT</th>\n",
-       "      <th>ADDRESS</th>\n",
-       "      <th>...</th>\n",
-       "      <th>SALE PRICE</th>\n",
-       "      <th>SALE DATE</th>\n",
-       "      <th>id</th>\n",
-       "      <th>limpiarfecha</th>\n",
-       "      <th>fecha</th>\n",
-       "      <th>hora</th>\n",
-       "      <th>año</th>\n",
-       "      <th>mes</th>\n",
-       "      <th>dia</th>\n",
-       "      <th>limpiaimpuestos</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ALPHABET CITY</td>\n",
-       "      <td>07 RENTALS - WALKUP APARTMENTS</td>\n",
-       "      <td>2A</td>\n",
-       "      <td>392</td>\n",
-       "      <td>6</td>\n",
-       "      <td></td>\n",
-       "      <td>C2</td>\n",
-       "      <td>153 AVENUE B</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6625000</td>\n",
-       "      <td>2017-07-19 00:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[2017-07-19, 00:00:00]</td>\n",
-       "      <td>2017-07-19</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>7</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ALPHABET CITY</td>\n",
-       "      <td>07 RENTALS - WALKUP APARTMENTS</td>\n",
-       "      <td>2</td>\n",
-       "      <td>399</td>\n",
-       "      <td>26</td>\n",
-       "      <td></td>\n",
-       "      <td>C7</td>\n",
-       "      <td>234 EAST 4TH   STREET</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2016-12-14 00:00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[2016-12-14, 00:00:00]</td>\n",
-       "      <td>2016-12-14</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>12</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ALPHABET CITY</td>\n",
-       "      <td>07 RENTALS - WALKUP APARTMENTS</td>\n",
-       "      <td>2</td>\n",
-       "      <td>399</td>\n",
-       "      <td>39</td>\n",
-       "      <td></td>\n",
-       "      <td>C7</td>\n",
-       "      <td>197 EAST 3RD   STREET</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2016-12-09 00:00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>[2016-12-09, 00:00:00]</td>\n",
-       "      <td>2016-12-09</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>12</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ALPHABET CITY</td>\n",
-       "      <td>07 RENTALS - WALKUP APARTMENTS</td>\n",
-       "      <td>2B</td>\n",
-       "      <td>402</td>\n",
-       "      <td>21</td>\n",
-       "      <td></td>\n",
-       "      <td>C4</td>\n",
-       "      <td>154 EAST 7TH STREET</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3936272</td>\n",
-       "      <td>2016-09-23 00:00:00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[2016-09-23, 00:00:00]</td>\n",
-       "      <td>2016-09-23</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>9</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ALPHABET CITY</td>\n",
-       "      <td>07 RENTALS - WALKUP APARTMENTS</td>\n",
-       "      <td>2A</td>\n",
-       "      <td>404</td>\n",
-       "      <td>55</td>\n",
-       "      <td></td>\n",
-       "      <td>C2</td>\n",
-       "      <td>301 EAST 10TH   STREET</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8000000</td>\n",
-       "      <td>2016-11-17 00:00:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[2016-11-17, 00:00:00]</td>\n",
-       "      <td>2016-11-17</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>11</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  BOROUGH   NEIGHBORHOOD  \\\n",
-       "0           4        1  ALPHABET CITY   \n",
-       "1           5        1  ALPHABET CITY   \n",
-       "2           6        1  ALPHABET CITY   \n",
-       "3           7        1  ALPHABET CITY   \n",
-       "4           8        1  ALPHABET CITY   \n",
-       "\n",
-       "                       BUILDING CLASS CATEGORY TAX CLASS AT PRESENT  BLOCK  \\\n",
-       "0  07 RENTALS - WALKUP APARTMENTS                                2A    392   \n",
-       "1  07 RENTALS - WALKUP APARTMENTS                                 2    399   \n",
-       "2  07 RENTALS - WALKUP APARTMENTS                                 2    399   \n",
-       "3  07 RENTALS - WALKUP APARTMENTS                                2B    402   \n",
-       "4  07 RENTALS - WALKUP APARTMENTS                                2A    404   \n",
-       "\n",
-       "   LOT EASE-MENT BUILDING CLASS AT PRESENT                 ADDRESS  ...  \\\n",
-       "0    6                                  C2            153 AVENUE B  ...   \n",
-       "1   26                                  C7   234 EAST 4TH   STREET  ...   \n",
-       "2   39                                  C7   197 EAST 3RD   STREET  ...   \n",
-       "3   21                                  C4     154 EAST 7TH STREET  ...   \n",
-       "4   55                                  C2  301 EAST 10TH   STREET  ...   \n",
-       "\n",
-       "  SALE PRICE            SALE DATE  id            limpiarfecha      fecha  \\\n",
-       "0    6625000  2017-07-19 00:00:00   1  [2017-07-19, 00:00:00] 2017-07-19   \n",
-       "1        -    2016-12-14 00:00:00   2  [2016-12-14, 00:00:00] 2016-12-14   \n",
-       "2        -    2016-12-09 00:00:00   3  [2016-12-09, 00:00:00] 2016-12-09   \n",
-       "3    3936272  2016-09-23 00:00:00   4  [2016-09-23, 00:00:00] 2016-09-23   \n",
-       "4    8000000  2016-11-17 00:00:00   5  [2016-11-17, 00:00:00] 2016-11-17   \n",
-       "\n",
-       "       hora   año  mes  dia limpiaimpuestos  \n",
-       "0  00:00:00  2017    7   19               1  \n",
-       "1  00:00:00  2016   12   14               1  \n",
-       "2  00:00:00  2016   12    9               1  \n",
-       "3  00:00:00  2016    9   23               1  \n",
-       "4  00:00:00  2016   11   17               1  \n",
-       "\n",
-       "[5 rows x 30 columns]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cdd.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>BOROUGH</th>\n",
-       "      <th>BLOCK</th>\n",
-       "      <th>LOT</th>\n",
-       "      <th>ZIP CODE</th>\n",
-       "      <th>RESIDENTIAL UNITS</th>\n",
-       "      <th>COMMERCIAL UNITS</th>\n",
-       "      <th>TOTAL UNITS</th>\n",
-       "      <th>YEAR BUILT</th>\n",
-       "      <th>TAX CLASS AT TIME OF SALE</th>\n",
-       "      <th>id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>10344.359878</td>\n",
-       "      <td>2.998758</td>\n",
-       "      <td>4237.218976</td>\n",
-       "      <td>376.224015</td>\n",
-       "      <td>10731.991614</td>\n",
-       "      <td>2.025264</td>\n",
-       "      <td>0.193559</td>\n",
-       "      <td>2.249184</td>\n",
-       "      <td>1789.322976</td>\n",
-       "      <td>1.657485</td>\n",
-       "      <td>42274.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>7151.779436</td>\n",
-       "      <td>1.289790</td>\n",
-       "      <td>3568.263407</td>\n",
-       "      <td>658.136814</td>\n",
-       "      <td>1290.879147</td>\n",
-       "      <td>16.721037</td>\n",
-       "      <td>8.713183</td>\n",
-       "      <td>18.972584</td>\n",
-       "      <td>537.344993</td>\n",
-       "      <td>0.819341</td>\n",
-       "      <td>24407.049617</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>4231.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1322.750000</td>\n",
-       "      <td>22.000000</td>\n",
-       "      <td>10305.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1920.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>21137.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>8942.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>3311.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>11209.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1940.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>42274.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>15987.250000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>6281.000000</td>\n",
-       "      <td>1001.000000</td>\n",
-       "      <td>11357.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1965.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>63411.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>26739.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>16322.000000</td>\n",
-       "      <td>9106.000000</td>\n",
-       "      <td>11694.000000</td>\n",
-       "      <td>1844.000000</td>\n",
-       "      <td>2261.000000</td>\n",
-       "      <td>2261.000000</td>\n",
-       "      <td>2017.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>84548.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Unnamed: 0       BOROUGH         BLOCK           LOT      ZIP CODE  \\\n",
-       "count  84548.000000  84548.000000  84548.000000  84548.000000  84548.000000   \n",
-       "mean   10344.359878      2.998758   4237.218976    376.224015  10731.991614   \n",
-       "std     7151.779436      1.289790   3568.263407    658.136814   1290.879147   \n",
-       "min        4.000000      1.000000      1.000000      1.000000      0.000000   \n",
-       "25%     4231.000000      2.000000   1322.750000     22.000000  10305.000000   \n",
-       "50%     8942.000000      3.000000   3311.000000     50.000000  11209.000000   \n",
-       "75%    15987.250000      4.000000   6281.000000   1001.000000  11357.000000   \n",
-       "max    26739.000000      5.000000  16322.000000   9106.000000  11694.000000   \n",
-       "\n",
-       "       RESIDENTIAL UNITS  COMMERCIAL UNITS   TOTAL UNITS    YEAR BUILT  \\\n",
-       "count       84548.000000      84548.000000  84548.000000  84548.000000   \n",
-       "mean            2.025264          0.193559      2.249184   1789.322976   \n",
-       "std            16.721037          8.713183     18.972584    537.344993   \n",
-       "min             0.000000          0.000000      0.000000      0.000000   \n",
-       "25%             0.000000          0.000000      1.000000   1920.000000   \n",
-       "50%             1.000000          0.000000      1.000000   1940.000000   \n",
-       "75%             2.000000          0.000000      2.000000   1965.000000   \n",
-       "max          1844.000000       2261.000000   2261.000000   2017.000000   \n",
-       "\n",
-       "       TAX CLASS AT TIME OF SALE            id  \n",
-       "count               84548.000000  84548.000000  \n",
-       "mean                    1.657485  42274.500000  \n",
-       "std                     0.819341  24407.049617  \n",
-       "min                     1.000000      1.000000  \n",
-       "25%                     1.000000  21137.750000  \n",
-       "50%                     2.000000  42274.500000  \n",
-       "75%                     2.000000  63411.250000  \n",
-       "max                     4.000000  84548.000000  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cdd['id'] = cdd.index+1\n",
-    "cdd.describe()"
+    "cdd = pd.read_csv('/home/spqr14/Documentos/Minería/mineria/Práctica 1/PrimeraEvaluacionMD/datos//nyc-rolling-sales.csv', encoding='utf8')"
    ]
   },
   {
